--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url(./Pexel-2.jpg);
+    background: url(./pexel-1.jpg);
     background-attachment: fixed;
     background-position: center;
+    overflow-x: hidden;
 }
 
 header {
