--- a/style.css
+++ b/style.css
@@ -165,8 +165,7 @@ header nav ul li a.active {
         width: 100%;
         height: calc(100vh - 50px);
         background: #333;
-        top: 50px;
-        left: 100%;
+        right: 0;
         transform: translateX(100%);
         transition: transform 0.3s cubic-bezier(0.73, 0.11, 0.67, 0.84); /* transition plus sexy*/
     }
