--- a/style.css
+++ b/style.css
@@ -161,14 +161,28 @@ header nav ul li a.active {
 
     /* #endregion Classe active Quand on click dessus*/
 
-    header nav {
-        position: absolute;
+    nav {
+        position: fixed;
         width: 100%;
         height: calc(100vh - 50px);
         background: #333;
         right: 0;
         transform: translateX(100%);
         transition: transform 0.3s cubic-bezier(0.73, 0.11, 0.67, 0.84); /* transition plus sexy*/
+
+        /* position: fixed;
+        width: 50vw;
+        min-height: 100vh;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background: lightblue;
+        border-left: 1px solid #cfcfcf;
+        transform: translateX(100%);
+        transition: transform 0.3s cubic-bezier(0.73, 0.11, 0.67, 0.84);  */
+        /* transition plus sexy*/
     }
 
     nav.active {
